--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 HttpartyRspec/Gemfile.lock
 HttpartyRspec/results/rspec_results.html
 HttpartyRspec/results/rspec_results.json
+ProjetoFinal/Gemfile.lock
